--- a/index.html
+++ b/index.html
@@ -57,6 +57,46 @@
                         <h3 class="section-heading uppercase">About Me</h3>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="three-reasons-icon fa fa-question" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-10">
+                                <h4 class="three-reasons-heading uppercase">What do I do?</h4>
+                                <p> I'm skilled Full Stack Developer with a wealth of diverse life and technical expierence that I bring to every project.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                     <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="three-reasons-icon fa fa-thumbs-up" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-10">
+                                <h4 class="three-reasons-heading uppercase">How do I do it?</h4>
+                                <p> I follow form as well as function. I know that the aesthetics of effective design combined with aplication speed,
+                                security and reliability combine to create great user expierence. 
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                     <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="three-reasons-icon fa fa-bolt" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-10">
+                                <h4 class="three-reasons-heading uppercase">Why hire me?</h4>
+                                <p> I work quicly and effectively in getting things built and working across the stack. I'm the excellent communicator 
+                                who thrives in bright and enthusiastic teams and I'm also a self starter when working solo.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
