--- a/index.html
+++ b/index.html
@@ -50,8 +50,63 @@
         </div>
     </header>
     <section class="container-fluid">
-        <div class="row row-table">
-            <div class="col-md-8 bg-color-three-reasons section-column">
+        <div class="row">
+            <div class="col-md-4 bg-color-personal-info section-column">
+                <div class="col-12">
+                    <h3 class="section-heading uppercase">
+                        Personal Info
+                    </h3>
+                </div>
+                <div class="personal-info-item">
+                    <div class="key">
+                      <p class="uppercase">
+                          Name:
+                      </p>  
+                    </div>
+                    <div class="value">
+                        <p>
+                           Jonas Danilevicius 
+                        </p>
+                    </div>
+                </div>
+                <div class="personal-info-item">
+                    <div class="key">
+                      <p class="uppercase">
+                          Address:
+                      </p>  
+                    </div>
+                    <div class="value">
+                        <p>
+                           23 Mill Court Drive, Clondalkin Dublin 22 
+                        </p>
+                    </div>
+                </div>
+                <div class="personal-info-item">
+                    <div class="key">
+                      <p class="uppercase">
+                          Phone:
+                      </p>  
+                    </div>
+                    <div class="value">
+                        <p>
+                           353852761576 
+                        </p>
+                    </div>
+                </div>
+                <div class="personal-info-item">
+                    <div class="key">
+                      <p class="uppercase">
+                          Email:
+                      </p>  
+                    </div>
+                    <div class="value">
+                        <p>
+                           Suvalkas24@gmail.com
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-8 bg-color-three-reasons">
                 <div class="row">
                     <div class="col">
                         <h3 class="section-heading uppercase">About Me</h3>
