beggining of resume section

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             <div class="col-sm-4">
                 <h5 class="uppercase general-sub">About</h5>
                 <p class="inline-block">
-                    Full stack Web developer. Expierenced in HTML, CSS, JavaScript, Django.
+                    Full stack Web developer. Expierenced in HTML, CSS, JavaScript, Phyton.
                 </p>
             </div>
             <div class="col-sm-4">
