--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                             </div>
                             <div class="col-10">
                                 <h4 class="three-reasons-heading uppercase">How do I do it?</h4>
-                                <p> I follow form as well as function. I know that the aesthetics of effective design combined with aplication speed,
+                                <p> I follow form as well as function. I know that the asthetics of effective design combined with aplication speed,
                                 security and reliability combine to create great user expierence. 
                                 </p>
                             </div>
