--- a/resume.html
+++ b/resume.html
@@ -73,7 +73,7 @@
                             </div>
                             <div class="col-10">
                                 <h4 class="three-reasons-heading uppercase">Front End</h4>
-                                <p> I'm skilled Full Stack Developer with a wealth of diverse life and technical expierence that I bring to every project.
+                                <p> I'm skilled in User Expierence design using the trinity of HTML/CSS/JavaScript.
                                 </p>
                             </div>
                         </div>
@@ -85,10 +85,49 @@
                             </div>
                             <div class="col-10">
                                 <h4 class="three-reasons-heading uppercase">Back End</h4>
-                                <p> I follow form as well as function. I know that the aesthetics of effective design combined with aplication speed,
-                                security and reliability combine to create great user expierence. 
+                                <p> I'm specialized in data-driven web aplications. Many of my projects utilise document-based data.
+                                I use Django and Python in conjuction with MongoDB  to process and present information.
                                 </p>
                             </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row progress-section">
+                    <div class="col">
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"
+                            style="width:90%;">
+                                <span class="sr-only">90% complete</span>
+                            </div>
+                            <span class="progress-type">HTML / HTML5</span>
+                        </div>
+                         <div class="progress">
+                            <div class="progress-bar bg-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"
+                            style="width:80%;">
+                                <span class="sr-only">80% complete</span>
+                            </div>
+                            <span class="progress-type">CSS / CSS3</span>
+                        </div>
+                         <div class="progress">
+                            <div class="progress-bar bg-info" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"
+                            style="width:70%;">
+                                <span class="sr-only">70% complete</span>
+                            </div>
+                            <span class="progress-type">JavaScript / jQuery</span>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"
+                            style="width:80%;">
+                                <span class="sr-only">80% complete</span>
+                            </div>
+                            <span class="progress-type">Django / Phyton</span>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="79" aria-valuemin="0" aria-valuemax="100"
+                            style="width:79%;">
+                                <span class="sr-only">79% complete</span>
+                            </div>
+                            <span class="progress-type">SQL / noSQL</span>
                         </div>
                     </div>
                 </div>
