--- a/resume.html
+++ b/resume.html
@@ -49,15 +49,30 @@
             </div>
         </div>
     </header>
-   <section class="container-fluid">
+    <section class="container-fluid">
         <div class="row">
-            <div class="col-md-4 bg-color-personal-info section-column">
-                <div class="col-12">
-                    <h3 class="section-heading uppercase">
-                        Work History
-                    </h3>
+            <div class="col-md-4 bg-color-work-history section-column">
+                <div class="row">
+                    <div class="col -12">
+                        <h3 class="history-heading uppercase">
+                            Work History
+                        </h3>
+                    </div>
                 </div>
-                
+                <div class="history-items">
+                    <div class="timeline-item" data-dates="09/2011 - 08/2014">
+                        <h4>Kaunas University of Applied Engineering Sciences</h4>
+                        <p>Automobile Technical Maintanance</p>
+                    </div>
+                    <div class="timeline-item" data-dates="01/2016 - 04/2018">
+                        <h4>ICETRONIX</h4>
+                        <p>Automechanic, Honda specialists in Ireland </p>
+                    </div>
+                    <div class="timeline-item" data-dates="04/2018 - present">
+                        <h4>BOLANDS OF CLONDALKIN </h4>
+                        <p>Automechanic in Opel Dealership</p>
+                    </div>
+                </div>
             </div>
             <div class="col-md-8 bg-color-three-reasons">
                 <div class="row">
@@ -78,15 +93,14 @@
                             </div>
                         </div>
                     </div>
-                     <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
                         <div class="row">
                             <div class="col-2">
                                 <i class="three-reasons-icon fa fa-gears" aria-hidden="true"></i>
                             </div>
                             <div class="col-10">
                                 <h4 class="three-reasons-heading uppercase">Back End</h4>
-                                <p> I'm specialized in data-driven web aplications. Many of my projects utilise document-based data.
-                                I use Django and Python in conjuction with MongoDB  to process and present information.
+                                <p> I'm specialized in data-driven web aplications. Many of my projects utilise document-based data. I use Django and Python in conjuction with MongoDB to process and present information.
                                 </p>
                             </div>
                         </div>
@@ -95,36 +109,31 @@
                 <div class="row progress-section">
                     <div class="col">
                         <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"
-                            style="width:90%;">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%;">
                                 <span class="sr-only">90% complete</span>
                             </div>
                             <span class="progress-type">HTML / HTML5</span>
                         </div>
-                         <div class="progress">
-                            <div class="progress-bar bg-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"
-                            style="width:80%;">
+                        <div class="progress">
+                            <div class="progress-bar bg-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%;">
                                 <span class="sr-only">80% complete</span>
                             </div>
                             <span class="progress-type">CSS / CSS3</span>
                         </div>
-                         <div class="progress">
-                            <div class="progress-bar bg-info" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"
-                            style="width:70%;">
+                        <div class="progress">
+                            <div class="progress-bar bg-info" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%;">
                                 <span class="sr-only">70% complete</span>
                             </div>
                             <span class="progress-type">JavaScript / jQuery</span>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"
-                            style="width:80%;">
+                            <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%;">
                                 <span class="sr-only">80% complete</span>
                             </div>
                             <span class="progress-type">Django / Phyton</span>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="79" aria-valuemin="0" aria-valuemax="100"
-                            style="width:79%;">
+                            <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="79" aria-valuemin="0" aria-valuemax="100" style="width:79%;">
                                 <span class="sr-only">79% complete</span>
                             </div>
                             <span class="progress-type">SQL / noSQL</span>
